# 2020_flask_tutorial

./: .gitignore  README.md  globalresources.json  pyproject.toml  requirements.txt
flaskblog/: __init__.py  config.py  forms.py  models.py  routes.py  site.db
flaskblog/main/: routes.py
flaskblog/templates/: account.html  charts.html  charts_map.html  create_post.html  home.html  layout.html  login.html  post.html  reset_request.html  reset_token.html
flaskblog/templates/errors/: 404.html
flaskblog/users/: forms.py
src/: flaskblog.py
src/static/: main.css
src/templates/: about.html  home.html  layout copy.html  layout.html  register.html
tutorial/: how_to_deploy.md
