[tool.poetry]
name = "flask-01"
version = "0.1.0"
description = ""
authors = ["Guilherme Loureiro <loureiro85@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.2"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
