[tool.poetry]
name = "flask-01"
version = "0.1.0"
description = ""
authors = ["Guilherme Loureiro <loureiro85@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.2"
flask = "^1.1.2"
flask-wtf = "^0.14.3"
wtforms = {extras = ["email"], version = "^2.3.1"}
flask_sqlalchemy = "^2.4.3"
flask-bcrypt = "^0.7.1"
flask-login = "^0.5.0"
Pillow = "^7.1.2"
pip = "^20.1.1"
flask-mail = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
